Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis optio temporibus, dolore aut dolorum et ea autem. Facere vitae architecto iste minima, sint maxime molestias nesciunt illo distinctio deleniti magni!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi repellendus soluta libero delectus quaerat, ipsum doloribus. Esse rerum, beatae at fugiat optio voluptatum vitae cumque iusto, autem error provident maxime.</p>
 </body>
 </html>
